fixed a mistake in header(overflow)

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,6 @@ body
 {
     background-color: rgb(209 234 244);
     height: 100px;
-    overflow: hidden;
 }
     /* menu bar */
     .logo
@@ -22,8 +21,8 @@ body
     }
     .logo img
     {
-        height: 90px;
-        width: 300px; 
+        height: 80px;
+        width: 200px; 
         margin: 5px;  
     }
     .menu
@@ -39,7 +38,7 @@ body
     }
     .menu ul li:not(:last-child)
     {
-        margin-right: 80px;
+        margin-right: 50px;
     }
     .menu ul li a
     {
